[package]
name = "croncat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-broadcast = "0.4.0"
async-channel = "1.6.1"
async-trait = "0.1.57"
bip39 = { version = "1.0.1", features = ["rand"] }
chain-registry = "0.1.0"
color-eyre = "0.6.1"
config = { version = "0.13.1", features = ["yaml"] }
cosmos-sdk-proto = { version = "0.14.0", features = ["grpc", "cosmwasm"] }
cosmrs = { version = "0.9.0", features = ["bip32", "rpc", "cosmwasm"] }
cosmwasm-std = { version = "1.1.5" }
croncat-pipeline = { version = "0.1.0", git = "https://github.com/CronCats/croncat-pipeline" } 
cw-croncat-core = { version = "0.1.1" }
cw-rules-core = { version = "0.1.0" }
cw20 = "0.16.0"
cw20-base = "0.16.0"
delegate = "0.8.0"
dotenv = "0.15.0"
envy = "0.4.2"
futures-util = "0.3.21"
indoc = "1.0.7"
lazy_static = "1.4.0"
prost = "0.11.0"
prost-types = "0.11.1"
rand = "0.8.5"
reqwest = "0.11.12"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
tendermint = "0.23.9"
tendermint-rpc = { version = "0.23.9", features = ["websocket-client", "http-client"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-retry = "0.3.0"
tonic = "0.8.2"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
url = "2.2.2"
whoami = "1.2.3"


[dev-dependencies]
tracing-test = "0.2.1"
