[package]
name = "croncatd"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.1"
croncat = { path = "../croncat" }
enum-display = "0.1.3"
futures = "0.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
tokio-compat = "0.1.6"

[features]
debug = []
