[package]
name = "croncatd"
version = "0.3.0"
edition = "2021"

[dependencies]
croncat = { path = "../croncat" }
enum-display = "0.1.3"
futures = "0.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"

[features]
debug = []
